2002-10-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: ([-synchronize]) handle locking more
	carefully ... avoid cpu intensive busy loops and give up after
	a while.

2002-10-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSLog.m: Added GSPrintf()
	* Tools/defaults.m: Use GSPrintf()
	* Tools/pldes.m: ditto
	* Tools/plser.m: ditto
	* Tools/plmerge.m: ditto
	* Tools/plparse.m: ditto
	* Tools/sfparse.m: ditto
	* Documentation/Base.gsdoc: Bump gsdoc version to 1.0.0
	* Documentation/Functions.gsdoc: ditto
	* Documentation/TypesAndConstants.gsdoc: ditto
	* Source/NSLog.m: Fix typo in comment.
	* Tools/AGSOutput.m: Bump gsdoc version to 1.0.0
	* Tools/GNUmakefile: Add gsdoc 1.0.0 dtd
	* Tools/autogsdoc.m: Bump gsdoc version to 1.0.0
	* Tools/gsdoc-0_6_7.dtd: Revert to earlier version
	* Tools/gsdoc-1_0_0.dtd: New from latest update to 0.6.7
	I think the documentation dtd is pretty complete now.

2002-10-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/GNUmakefile: revert ... can't build if base library isn't
	installed.

2002-10-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSLog.m: Lots of documentation added.
	* Tools/GNUmakefile: build autogsdoc documentation automatically
	if possible.
	* Tools/AGSOutput.m: Make automatic cross references for functions.
	* Source/Docmakefile: Use handcrafted template files.  Document the
	path utilities file.
	* Documentation/Functions.gsdoc: Handcrafted template.
	* Documentation/TypesAndConstants.gsdoc: Handcrafted template.

2002-10-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSDebug.h: Make warn logs de-selectable at
	runtime by setting the NoWarn debug level.  Document.  Say that
	debug levels can be added by putting them in the GNU-Debug
	array in the defaults database.
	* Source/NSUserDefaults.m: Add contents of the GNU-Debug array to
	the set of active debug levels.
	* Tools/AGSParser.m: Updated with support for documenting macros.
	* Tools/AGSOutput.m: ditto